--- a/src/meson.build
+++ b/src/meson.build
@@ -28,8 +28,10 @@ wike_sources = [
   'search.py',
   'toc.py',
   'view.py',
+  'wiki.py',
   'wikipedia.py',
-  'window.py'
+  'window.py',
+  'zim.py',
 ]
 
 install_data(wike_sources, install_dir: moduledir)
